2006-09-21 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Dock.mdp: Added missing resources.

2006-07-18 Lluis Sanchez Gual  <lluis@novell.com>

	* DockPlaceholder.cs:
	* DockItem.cs:
	* DockObject.cs: 
	* Dock.cs:
	* DockNotebook.cs:
	* DockPaned.cs: Fixed several bugs related to hiding, showing and
	  iconifying docks.
	
	* MonoDevelop.Dock.mdp: Updated.

2006-07-05 Lluis Sanchez Gual  <lluis@novell.com>

	* DragNotebook.cs: Provide the correct value for "old page" when
	  firing the TabsReordered event.

2006-07-04 Lluis Sanchez Gual  <lluis@novell.com>

	* DockItem.cs: Added some events which are fired when the item is
	  shown or hidden.

2006-06-25  John Luke  <john.luke@gmail.com>

	* Makefile.am: change path of dock-test.exe
	* DockItem.cs: don't try to allocate negative values

2006-06-25  John Luke  <john.luke@gmail.com>

	* *.cs: use generic collections

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Dock.mdp: Updated.

2006-04-30  David Makovský (Yakeen) <yakeen@sannyas-on.net> 

	* MonoDevelop.Dock.mdp
	* Makefile.am
	* DragNotebook.cs: added - moved from MonoDevelop.Components, fixes
	* DockNotebook.cs: use DragNotebook 

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Dock.mdp: Updated.
	* Makefile.am: Use an unified format. Patch by Matze Braun.

2006-03-16  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* DockItem.cs: Added setter to the Iconified property.	

2006-03-03  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* DockBar.cs:
	* DockBarButton.cs:
	* DockItem.cs:
	* DockItemGrip.cs:
	Added comments, fixed a variable name and fixed a
	internationalization issue.

2006-03-03  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* DockBar.cs: Use correct tooltip for iconified docks.
	
2006-01-24  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* DockItem.cs:
	* Makefile.am:
	Added internationalization. Fixes bug 77102.

2006-01-22  Lluis Sanchez Gual <lluis@novell.com>
